@@ -5,7 +5,6 @@ import io.github.apace100.apoli.power.ItemOnItemPower;
 import io.github.apace100.apoli.power.ModifyFoodPower;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.inventory.StackReference;
-import net.minecraft.item.FoodComponent;
 import net.minecraft.item.Item;
 import net.minecraft.item.ItemStack;
 import net.minecraft.screen.slot.Slot;
@@ -16,11 +15,9 @@ import net.minecraft.world.World;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
-import org.spongepowered.asm.mixin.injection.Redirect;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Mixin(Item.class)
 public class ItemMixin {
@@ -36,20 +33,22 @@ public class ItemMixin {
     }
 
     @Inject(method = "onClicked", at = @At("RETURN"), cancellable = true)
-    private void forgeItem(ItemStack stack, ItemStack otherStack, Slot slot, ClickType clickType, PlayerEntity player, StackReference cursorStackReference, CallbackInfoReturnable<Boolean> cir) {
+    private void apoli$itemOnItem(ItemStack stack, ItemStack otherStack, Slot slot, ClickType clickType, PlayerEntity player, StackReference cursorStackReference, CallbackInfoReturnable<Boolean> cir) {
+
         if(cir.getReturnValue()) {
             return;
         }
-        if (clickType != ClickType.RIGHT) {
-            return;
-        }
-        List<ItemOnItemPower> powers = PowerHolderComponent.getPowers(player, ItemOnItemPower.class).stream().filter(p -> p.doesApply(otherStack, stack)).collect(Collectors.toList());
-        for (ItemOnItemPower p :
-            powers) {
-            p.execute(otherStack, stack, slot);
-        }
-        if(powers.size() > 0) {
+
+        List<ItemOnItemPower> itemOnItemPowers = PowerHolderComponent
+            .getPowers(player, ItemOnItemPower.class)
+            .stream()
+            .filter(p -> p.doesApply(otherStack, stack, clickType))
+            .toList();
+
+        if(!itemOnItemPowers.isEmpty()) {
+            itemOnItemPowers.forEach(p -> p.execute(otherStack, stack, slot));
             cir.setReturnValue(true);
         }
+
     }
 }
